# infscale

./: .gitignore  .openapi-generator-ignore  LICENSE.txt  Makefile  README.md  ds_config.json  inference_pipeline.py  optim_inference_pipeline.py  partition_analysis.py  per_layer_profiling.py  profile_llama_decode.sh  profile_llama_prefill.sh  profile_llama_prefill_trim.sh  profile_resnet.sh  pyproject.toml  resnet50_dist_inference.py  resnet50_dist_inference_extreme_uneven.py  resnet50_dist_inference_mild_uneven.py  resnet50_profile.json  setup.py  trim_llama.sh  trim_llama_uniform.py  vgg16_profile.json
.openapi-generator/: FILES
bert/: bert_dist_inference.py  bert_uneven.csv
examples/configs/: controller.yaml
examples/gpt2/: no_rep.yaml
examples/llama3/: linear.yaml  linear_p3.8xlarge.yaml  no_rep.yaml
examples/llama3/auto/: linear-no-recover.yaml  linear.yaml  linear_p3.8xlarge.yaml  no_rep.yaml
examples/llama3/static/: gsm8k.yaml  linear-no-recover.yaml  linear.yaml  linear_p3.8xlarge.yaml  mesh.yaml  no_rep.yaml  two_linear.yaml
examples/req_gen_configs/: exp_req_gen.yaml
examples/resnet152/: diamond.yaml  diamond_static.yaml  linear.yaml  servespec0.yaml  servespec1.yaml  servespec2.yaml  servespec_template.yaml  single_no_rep.yaml  single_rep.yaml
examples/resnet50/: resnet50_dist_inference.py
infscale/: __init__.py  cli.py  config.py  constants.py  openapi_README.md  openapi_client_README.md  optim_inference_pipeline.py
infscale/.openapi-generator/: FILES
infscale/actor/: agent.py  config_diff.py  job_manager.py  job_msg.py  worker.py  worker_comm.py  worker_manager.py
infscale/agent/: __init__.py  agent.py  job_manager.py  worker_manager.py
infscale/cmd/: run.py  serve.py  start.py  stop.py  update.py
infscale/common/: constants.py  exceptions.py  job_msg.py  metrics.py
infscale/configs/: job.py  plan.py
infscale/controller/: agent_context.py  apiserver.py  autoscaler.py  cfggen.py  controller.py  deployment_placement.py  job_context.py  job_state.py
infscale/execution/: comm.py  config_manager.py  config_runner.py  control.py  metrics_collector.py  pipeline.py  router.py  server.py  stage.py  world.py
infscale/module/: dataset.py  model_metadata.py  modelir.py  sharder.py  sharding.py  zoo.py
infscale/monitor/: cpu.py  gpu.py
infscale/openapi/: __init__.py  api_client.py  configuration.py  rest.py
infscale/openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
infscale/proto/: management.proto  management_pb2.py  management_pb2_grpc.py
infscale/request/: config.py  generator.py
infscale/utils/: __init__.py  timeit.py
infscale/worker/: worker.py
integration-tests/: constants.py  run_tests.py  tests_dtype.py
integration-tests/templates/: cleanup_processes.yaml  create_logs_folder.yaml  infscale_async_shell_command.mustache  infscale_shell_command.mustache  job_status.yaml  other_shell_command.mustache  task.yaml
integration-tests/tests/: multi_host_linear.yaml  static_ctrl_cfg.yaml  static_single_host_linear.yaml  update_job.yaml
llama/: llama13b_profile.json  llama7b_profile.json  llama_dist_inference.py
patch/: transformers-v4.45.2.patch
profiling/: bert_profiling.py  bert_training_profiling.py  llama_profiling.py  profile_in_json.py  resnet50_profiling.py  vgg16_profiling.py
resnet50/: resnet50_dist_inference.py  resnet50_ds_inference.py  resnet50_even.csv  resnet50_multinode_launch.py
scripts/: generator-config.yaml  openapi.sh
tests/agent/: conftest.py  test_job_manager.py
tests/configs/: conftest.py  test_remove_pipeline.py
tests/module/: conftest.py  test_config_diff.py  test_dataset.py  test_sharder.py
tools/: README.md  visualize_job.py
vgg16/: vgg16_dist_inference.py  vgg16_mild_uneven.csv
(+64 files in other folders)
