
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="infscale"
dynamic = ["version"]
authors = [{ name="InfScale Maintainers", email="infscale-maintainers@cisco.com" }]
description="InfScale is a model serving system that supports deep learning models reliably and scalably"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate >= 0.24.1",
    "click>=8.1.7",
    "datasets >= 2.14.6",
    "fastapi >= 0.109.0",
    "grpcio >= 1.60.0",
    "multiworld >= 0.2.1",
    "protobuf >= 4.25.1",
    "pydantic >= 2.4.2",
    "pynvml >= 11.5.0",
    "requests>=2.31.0",
    "torch == 2.4.0",
    "torchvision == 0.19.0",
    "transformers == 4.45.2",
    "uvicorn >= 0.26.0"
]

[project.scripts]
infscale = "infscale.cli:cli"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "grpcio-tools",
    "isort",
    "pip-tools",
    "pytest",
    "python-lsp-server",
]

[tool.setuptools.dynamic]
version = {attr = "infscale.__version__"}
