
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="infscale"
dynamic = ["version"]
authors = [{ name="InfScale Maintainers", email="infscale-maintainers@cisco.com" }]
description="InfScale is a model serving system that supports deep learning models reliably and scalably"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate >= 0.24.1",
    "click>=8.1.7",
    "datasets >= 2.14.6",
    "fastapi >= 0.109.0",
    "grpcio >= 1.60.0",
    "multiworld >= 0.2.2",
    "protobuf >= 4.25.1",
    "psutil >= 5.9.5",
    "pydantic >= 2.4.2",
    "pynvml >= 11.5.0",
    "requests>=2.31.0",
    "torch == 2.4.0",
    "torchvision == 0.19.0",
    "transformers == 4.45.2",
    "uvicorn >= 0.26.0"
]

[project.scripts]
infscale = "infscale.cli:cli"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "grpcio-tools",
    "isort",
    "pip-tools",
    "pytest",
    "python-lsp-server",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "integration-tests*", "tools*"]

# [tool.setuptools]
# packages = ["infscale"]

[tool.setuptools.package-data]
"infscale" = ["patch/*.patch"]

[tool.setuptools.dynamic]
version = {attr = "infscale.__version__"}

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
src_paths = ["infscale", "tests"]
extra_standard_library = ["typing_extensions"]
skip_gitignore = true
skip = ["management_pb2.py", "management_pb2_grpc.py"]
# skip_glob = []
atomic = true
profile = "black"
indent = 4
line_length = 88
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
